visibility fix

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -424,6 +424,7 @@ div.tab button {
 /* Change background color of buttons on hover */
 div.tab button:hover {
     background-color: #fffb1c;
+    color: black;
 }
 
 /* Create an active/current tablink class */
